// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.edpaggregator.crypto;

option java_package = "org.wfanet.measurement.edpaggregator.crypto";
option java_multiple_files = true;
option java_outer_classname = "EncryptionKeyProto";

enum HashType {
  UNKNOWN_HASH = 0;
  SHA1 = 1;  // Using SHA1 for digital signature is deprecated but HMAC-SHA1 is
  // fine.
  SHA384 = 2;
  SHA256 = 3;
  SHA512 = 4;
  SHA224 = 5;
}

message AesGcmHkdfStreamingParams {
  uint32 ciphertext_segment_size = 1;
  uint32 derived_key_size = 2;  // size of AES-GCM keys derived for each segment
  HashType hkdf_hash_type = 3;
}


message AesGcmHkdfStreamingKey {
  uint32 version = 1;
  AesGcmHkdfStreamingParams params = 2;
  bytes key_value = 3;  // Placeholder for ctype and debug_redact.
}

message EncryptionKey {
  oneof key_type {
    AesGcmHkdfStreamingKey aes_gcm_hkdf_streaming_key = 1;
  }
}